[gd_scene load_steps=3 format=3 uid="uid://be0iv16y63jix"]

[ext_resource type="Script" path="res://scripts/input_handler.gd" id="1_7ckaf"]

[sub_resource type="LabelSettings" id="LabelSettings_q83af"]
font_size = 32
shadow_size = 3

[node name="InputHandler" type="Node2D"]
script = ExtResource("1_7ckaf")

[node name="DotDashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SymbolSpaceTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Label" type="Label" parent="."]
top_level = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -45.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_q83af")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="DotDashTimer" to="." method="_on_dot_dash_timer_timeout"]
[connection signal="timeout" from="SymbolSpaceTimer" to="." method="_on_symbol_space_timer_timeout"]
